--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -1,14 +1,14 @@
-<div class="row" ng-show="allRequestData.length">
+<div class="row" ng-show="data.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     
     <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
                             radio="requests.radio" settings="requests.settings"
                             selections="requests.selections" options="requests.options"
-                            chart-data="allRequestData" priority-markup="priorityBlockMarkup">
+                            chart-data="data" priority-markup="priorityBlockMarkup">
     </mcm-customizable-chart>
     
     <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns"
-                         data="allRequestData" full-terms="piecharts.fullTerms"
+                         data="data" full-terms="piecharts.fullTerms"
                          compact-terms="piecharts.compactTerms" sum-by="piecharts.sum"
                          nest-by="piecharts.nestBy" show-upcoming="displayChains"
                          human-readable-numbers="humanReadableNumbers">
