--- a/pmp/templates/valid-head-dev.html
+++ b/pmp/templates/valid-head-dev.html
@@ -7,40 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--external CSS-->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="bower_components/animate.css/animate.min.css" rel="stylesheet"/>
+    <link href="build/depend.build.css" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:900,400" rel="stylesheet" type="text/css"/>
 
     <!--pMp CSS-->
-    <link href="css/pmp.css" rel="stylesheet"/>
+    <link href="build/pmp.build.min.css"  rel="stylesheet" type="text/css"/>
 
     <!--external JS-->
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/jquery-sortable/source/js/jquery-sortable-min.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="build/depend.build.js"></script>
     <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
 
     <!--pMp JS-->    
     <script type="text/javascript" src="js/charts.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/services/info.js"></script>
-    <script type="text/javascript" src="js/services/data.js"></script>
-    <script type="text/javascript" src="js/services.js"></script>
-    <script type="text/javascript" src="js/controllers/main.js"></script>
-    <script type="text/javascript" src="js/controllers/index.js"></script>
-    <script type="text/javascript" src="js/controllers/present.js"></script>
-    <script type="text/javascript" src="js/controllers/historical.js"></script>
-    <script type="text/javascript" src="js/controllers/performance.js"></script>
-    <!-- Currently not used <script type="text/javascript" src="js/controllers/chains.js"></script> -->
-    <script type="text/javascript" src="js/controllers/filter.js"></script>
-    <script type="text/javascript" src="js/controllers/share.js"></script>
-    <script type="text/javascript" src="js/controllers/typeahead.js"></script>
+    <script type="text/javascript" src="build/pmp.build.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png" />
   </head>
