--- a/pmp/templates/valid-head.html
+++ b/pmp/templates/valid-head.html
@@ -7,23 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--external CSS-->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="bower_components/animate.css/animate.min.css" rel="stylesheet"/>
+    <link href="build/depend.build.css"/>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:900,400" rel="stylesheet" type="text/css"/>
 
     <!--pMp CSS-->
     <link href="build/pmp.build.css" rel="stylesheet"/>
 
     <!--external JS-->
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/jquery-sortable/source/js/jquery-sortable-min.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="build/depend.build.js"></script>
     <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
 
     <!--pMp JS-->    
