--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -1,10 +1,10 @@
 <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing" ng-controller="FilterController" ng-init="initFilter()">
-  <div ng-show="isEmpty(filterStatus)">
+  <div ng-show="isEmpty(statusFilter)">
     <small>
       No data to filter
     </small>
   </div>
-  <div ng-show="!isEmpty(filterStatus)">
+  <div ng-show="!isEmpty(statusFilter)">
     <form class="form-group form-inline form-group-sm">
       <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">
         Priority filter
