exporting error messages

--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -1,4 +1,4 @@
-<div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing" ng-controller="FilterController" ng-init="initFilter()">
+<div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing" ng-controller="FilterController" ng-init="initFilter();init();">
   <div ng-show="isEmpty(statusFilter)">
     <small>
       No data to filter
