--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="showView" ng-init="init()"></div>
+<div class="row" ng-show="showView"></div>
   <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
    <div class="row">
      <div class="row">
