--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -17,8 +17,7 @@
         </label>
         <br ng-hide="page.id == 3"/>
         <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 1">
-          <input type="checkbox" ng-model="$parent.priorityBlockMarkup"
-                 ng-init="$parent.priorityBlockMarkup=true">
+          <input type="checkbox" ng-model="$parent.priorityBlockMarkup" ng-init="$parent.priorityBlockMarkup=true">
           <small>Priority blocks markup</small>
         </label>
         <br ng-show="page.id == 1"/>
