--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -1,6 +1,6 @@
 <div class="row" ng-show="data.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    
+{{priorityBlockMarkup}}a
     <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
                             radio="requests.radio" settings="requests.settings"
                             selections="requests.selections" options="requests.options"
