--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -1,4 +1,4 @@
-<div class="row" ng-hide="!allRequestData.length">
+<div class="row" ng-show="data.length">
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <drop-selections difference="difference" selections="selections" linear-scale="linearScale">
@@ -12,7 +12,7 @@
   </div>
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <stats-table chart-data="allRequestData" minuend="difference.minuend"
+    <stats-table chart-data="data" minuend="difference.minuend"
                  subtrahend="difference.subtrahend"></stats-table>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
@@ -23,7 +23,7 @@
     </a>  
   </div>
   <div id="event-drop" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <event-drop chart-data="allRequestData"></event-drop>
+    <event-drop chart-data="data"></event-drop>
   </div>
 
 </div>
