--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -1,4 +1,5 @@
 <div class="row" ng-show="showView"></div>
+<!--<div class="full" ng-show="loadingData"></div>-->
   <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
    <div class="row">
      <div class="row">
