--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -30,7 +30,7 @@
                    <span class="hidden-sm hidden-xs"> Append</span>
                  </button>
                  <button type="button" class="btn btn-danger" ng-click="load('all')"
-                         ng-disabled="loadingData || displayChains || title == 'Historical Statistics'">
+                         ng-disabled="loadingData || displayChains || page.id == 2">
                    <i class="hidden-lg hidden-md fa fa-globe"></i>
                    <span class="hidden-sm hidden-xs"> Load <strong>all</strong></span>
                  </button>
