--- a/pmp/static/partials/share.html
+++ b/pmp/static/partials/share.html
@@ -4,7 +4,7 @@
       <small>Shorten</small>
     </span>
     <input id="url" type="text" class="form-control" ng-model="url" placeholder="Refresh to get URL">
-    <span id="copy" data-clipboard-text="{{url}}" ng-init="initZeroClipboard()" class="btn btn-primary input-group-addon pointer">
+    <span id="copy" data-clipboard-text="{{url}}" ng-init="initShare()" class="btn btn-primary input-group-addon pointer">
       <i class="fa fa-copy"></i>
     </span>
   </div>
