--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -13,7 +13,7 @@
      <div class="row">
        <div class="well">
          <div class="row">
-           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="TypeaheadController">
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="TypeaheadController" ng-init="initSuggestions()">
              <div class="input-group spacing">
                <input type="text" ng-model="campaign" ng-change="getSuggestions(campaign, page.typeahead)" typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
                       class="form-control" autocomplete="off"
