warning fix insecure display content

--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -84,21 +84,21 @@
         <div class="modal-content">
           <div class="modal-body text-center">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <p>You are using a web browser we don't support. Try one of the options below</p>
+            <p>You are using a web browser we do not support. Try one of the options below</p>
             <a class="btn btn-default" href="http://www.google.com/chrome/" role="button">
-              <img height="20px" src="http://png-5.findicons.com/files/icons/949/token/256/chrome.png" /><br/>
+              <img height="20px" src="img/ic_chrome.png" /><br/>
               Chrome
             </a>
             <a class="btn btn-default" href="https://www.mozilla.org/en-US/firefox/new/" role="button">
-              <img height="20px" src="http://png-3.findicons.com/files/icons/949/token/256/firefox.png" /><br/>
+              <img height="20px" src="img/ic_firefox.png" /><br/>
               Firefox
             </a>
             <a class="btn btn-default" href="https://www.apple.com/safari/" role="button">
-              <img height="20px" src="https://cdn4.iconfinder.com/data/icons/devine_icons/Black/PNG/Appliaction%20and%20Programs/Safari.png" /><br/>
+              <img height="20px" src="img/ic_safari.png" /><br/>
               Safari</a>
             <a class="btn btn-default" href="http://www.opera.com/" role="button">
-              <img height="20px" src="http://megaicons.net/static/img/icons_sizes/8/178/512/browsers-opera-icon.png" /><br/>
-          Opera</a>
+              <img height="20px" src="img/ic_opera.png" /><br/>
+              Opera</a>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Let me try pMp anyway</button>
