--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
-        <a href="/index/">
+        <a href="index" ng-click="nav('/index/')">
           <img src="img/ic_fav.png" class="brand-adjust" alt="PMP"/>
         </a>
         <div class="navbar-header">
