--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -1,32 +1,32 @@
 <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
   <form class="form-group text-uppercase">
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 1">
-      <input type="checkbox" ng-model="$parent.displayChains" ng-change="modeUpdate(false);setURL()">
+      <input type="checkbox" ng-model="$parent.displayChains" ng-change="modeUpdate(false);setURL()" ng-disabled="loadingData">
       <small>Display Chains</small>
     </label>
     <br ng-show="page.id == 1"/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 1">
-      <input type="checkbox" ng-model="$parent.growingMode" ng-change="modeUpdate(false);setURL()">
+      <input type="checkbox" ng-model="$parent.growingMode" ng-change="modeUpdate(false);setURL()" ng-disabled="loadingData">
       <small>Growing Mode</small>
     </label>
     <br ng-show="page.id == 1"/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-hide="page.id == 3">
-      <input type="checkbox" ng-model="$parent.humanReadableNumbers" ng-init="$parent.humanReadableNumbers=true">
+      <input type="checkbox" ng-model="$parent.humanReadableNumbers" ng-init="$parent.humanReadableNumbers=true" ng-disabled="loadingData">
       <small>Human Readable Numbers</small>
     </label>
     <br ng-hide="page.id == 3"/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 1">
-      <input type="checkbox" ng-model="$parent.priorityBlockMarkup" ng-init="$parent.priorityBlockMarkup=true">
+      <input type="checkbox" ng-model="$parent.priorityBlockMarkup" ng-init="$parent.priorityBlockMarkup=true" ng-disabled="loadingData">
       <small>Priority blocks markup</small>
     </label>
     <br ng-show="page.id == 1"/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
-      <input type="checkbox" ng-model="$parent.showDate" ng-change="setURL()">
+      <input type="checkbox" ng-model="$parent.showDate" ng-change="setURL()" ng-disabled="loadingData">
       <small>Show time.</small>
     </label>
     <br/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 2">
-      <input type="checkbox" ng-model="$parent.zoomOnY" ng-change="setURL()">
+      <input type="checkbox" ng-model="$parent.zoomOnY" ng-change="setURL()" ng-disabled="loadingData">
       <small>y axis zoom</small>
     </label>
   </form>
