--- a/pmp/templates/valid-head.html
+++ b/pmp/templates/valid-head.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
 
     <!--pMp JS-->    
-    <script type="text/javascript" src="js/charts.js"></script>
+    <script type="text/javascript" src="build/directives.pmp.build.js"></script>
     <script type="text/javascript" src="build/pmp.build.min.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png" />
