--- a/pmp/static/partials/drop-selections.html
+++ b/pmp/static/partials/drop-selections.html
@@ -8,14 +8,14 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 3px">
     <span class="col-lg-2 col-md-2 col-sm-3 col-xs-5 nav-header text-muted">selections</span>
     <ul id="possible-selections" class="nav nav-pills dnd col-lg-10 col-md-10 col-sm-10 col-xs-8 inline" style="min-height:22px">
-      <li class="btn btn-default btn-xs text-uppercase" ng-repeat="value in selections">
+      <li class="btn btn-default btn-xs text-uppercase" ng-repeat="value in selectionsHelper">
         {{value}}
       </li>
     </ul>
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" ng-repeat="(key, value) in options">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" ng-repeat="(key, value) in optionsHelper">
     <span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 nav-header" style="margin-bottom: 3px">
       {{key}}
     </span>
@@ -37,7 +37,7 @@
           <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="linearScale" ng-click="changeScale(true)" btn-radio="true">
             linear
           </button>
-          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="logScale" ng-click="changeScale(false)" btn-radio="true">
+          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="!linearScale" ng-click="changeScale(false)" btn-radio="true">
             log
           </button>
         </div>
