--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -1,20 +1,17 @@
 <div class="row" ng-show="data.length">
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <drop-selections difference="difference" selections="selections" linear-scale="linearScale">
-    </drop-selections>
+    <drop-selections options="difference" selections="selections" linear-scale="linearScale"></drop-selections>
   </div>
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <performance-histogram chart-data="histogramData" chart-data-extended="histogramDataExtended"
-                           linear-scale="linearScale", number-of-bins="bins">
-    </performance-histogram>
+    <performance-histogram chart-data="histogramData" chart-data-extended="histogramDataExtended" linear-scale="linearScale", number-of-bins="bins"></performance-histogram>
   </div>
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <stats-table chart-data="data" minuend="difference.minuend"
-                 subtrahend="difference.subtrahend"></stats-table>
+    <stats-table chart-data="data" minuend="difference.minuend" subtrahend="difference.subtrahend"></stats-table>
   </div>
+
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <a class="btn btn-sm text-uppercase padding-r" data-target="#event-drop" data-toggle="collapse">
       <small>
@@ -22,6 +19,7 @@
       </small>
     </a>  
   </div>
+
   <div id="event-drop" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <event-drop chart-data="data"></event-drop>
   </div>
