--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -1,7 +1,7 @@
 <div class="row" ng-show="data.length">
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <drop-selections options="difference" selections="selections" linear-scale="linearScale"></drop-selections>
+    <drop-selections options="difference" selections="selections" linear-scale="linearScale" show-scale="true" show-mode="false"></drop-selections>
   </div>
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
