--- a/pmp/static/partials/drop-selections.html
+++ b/pmp/static/partials/drop-selections.html
@@ -20,7 +20,7 @@
       {{key}}
     </span>
     <ul id="{{key}}" class="nav nav-pills dnd single col-lg-8 col-md-8 col-sm-8 col-xs-8 inline alert-info" style="min-height: 23px; margin-top: 1px;" ng-if="!(value | isArray)">
-      <li class="btn btn-default btn-xs text-uppercase">
+      <li class="btn btn-default btn-xs text-uppercase" ng-if="value != ''">
         {{value}}
       </li>
     </ul>
@@ -40,10 +40,10 @@
     <ul class="nav nav-pills inline col-lg-8 col-md-8 col-sm-8 col-xs-8">
       <li>
         <div class="btn-group" ng-click="changeScale()">
-          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="radio.scale" btn-radio="'linear'" ng-class="{active: linearScale}">
+          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="radio.scale" btn-radio="'linear'">
             linear
           </button>
-          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="radio.scale" btn-radio="'log'" ng-class="{active: !linearScale}">
+          <button type="button" class="btn btn-primary btn-xs text-uppercase" ng-model="radio.scale" btn-radio="'log'">
             log
           </button>
         </div>
