--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -3,13 +3,9 @@
 
     <drop-selections scale="scaleType" mode="modeType" options="requests.options" selections="requests.selections" show-mode="true" show-scale="true"></drop-selections>
 
-    <mcm-column-chart scale="scaleType" mode="modeType" sort="requests.settigns.sort" legend="requests.settings.legend" duration="requests.settings.duration" coloring="requests.options.coloring" stacking="requests.options.stacking" grouping="requests.options.grouping" data="data" priority-markup="priorityMarkup"></mcm-column-chart>
+    <column-chart scale="scaleType" mode="modeType" sort="requests.settigns.sort" legend="requests.settings.legend" duration="requests.settings.duration" coloring="requests.options.coloring" stacking="requests.options.stacking" grouping="requests.options.grouping" data="data" priority-markup="priorityMarkup"></column-chart>
     
-    <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns"
-                         data="data" full-terms="piecharts.fullTerms"
-                         compact-terms="piecharts.compactTerms" sum-by="piecharts.sum"
-                         nest-by="piecharts.nestBy" show-upcoming="displayChains"
-                         human-readable-numbers="humanReadableNumbers">
+    <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns" data="data" full-terms="piecharts.fullTerms" compact-terms="piecharts.compactTerms" sum-by="piecharts.sum" nest-by="piecharts.nestBy" show-upcoming="displayChains" human-readable-numbers="humanReadableNumbers">
     </multiple-pie-charts>
     
   </div>
