--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -6,7 +6,7 @@
     <h4>monitor the workflow monte carlo request submission</h4>
   </div>
 </div>
-<div class="row text-center">
+<div class="row spacing text-center">
   <hr class="line"/>
   <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
 
@@ -79,5 +79,22 @@
       </p>
     </div>
 
+  </div>
+</div>
+
+<div class="row spacing text-center">
+  <h3>
+    <strong>So far we indexed:</strong>
+  </h3>
+  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h1>{{value}}</h1>
+      </div>
+      <br/>
+      <div class="panel-body">
+        <small class="text-uppercase">{{key}}</small>
+      </div>
+    </div>
   </div>
 </div>
