--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -51,8 +51,10 @@ body {
 }
 
 .popup {
-    position: absolute;
-    width: 83%;
+    bottom: 20px;
+    right: 20px;
+    position: fixed;
+    width: 300px;
     z-index: 2001;
 }
 
