Polish "show time" feature in advanced
Remove full stop in option label, remove current datetime and add
timezone to last update

--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -22,7 +22,7 @@
     <br ng-show="page.id == 1"/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
       <input type="checkbox" ng-model="$parent.showDate" ng-change="setURL()" ng-disabled="loadingData">
-      <small>Show time.</small>
+      <small>Show time</small>
     </label>
     <br/>
     <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12" ng-show="page.id == 2">
