--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -56,11 +56,7 @@
      <div class="row">
        <div class="panel" ng-show="showDate">
          <div class="panel-body">
-           Current time:
-           <strong>
-             {{dt | date:"d MMMM y H:mm"}}
-           </strong>
-           ({{dt | date: "'GMT': Z"}}). Last update: {{lastUpdate | date:"d MMMM y H:mm"}}
+           Last update: {{lastUpdate | date:"d MMMM y H:mm 'UTC'Z"}}
          </div>
        </div>
      </div>
