--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -13,8 +13,8 @@
       </div>
       <div class="col-lg-9 col-md-9 col-sm-9">
         <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="{{value > 100 ? 100 : value}}" aria-valuemin="0" aria-valuemax="100" style="width: {{value > 100 ? 100 : value}}%;">
-            {{value > 100 ? '>100' : value}}%
+          <div class="{{getSubmittedProgressClass(value)}}" role="progressbar" aria-valuenow="{{getSubmittedProgressWidth(value)}}" aria-valuemin="0" aria-valuemax="100" style="width: {{getSubmittedProgressWidth(value)}}%;">
+            {{getSubmittedProgressLabel(value)}}
           </div>
         </div>
       </div>
