Improve descriptions on index page

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -3,7 +3,7 @@
     <h2>
       <strong>Production Monitoring Platform</strong>
     </h2>
-    <h4>monitor the workflow monte carlo request submission</h4>
+    <h4>Monitor the progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
 </div>
 <div class="row spacing text-center">
@@ -16,7 +16,7 @@
         <h3>Present</h3>
       </a>
       <p>
-        Get information about selected campaigns and view numbers for statuses of selected campaigns' requests
+        Get information about selected campaigns and their requests
       </p>
     </div>
 
@@ -26,7 +26,7 @@
         <h3>Historical</h3>
       </a>
       <p>
-        Get the history growth plot of the campaign, request or workflow
+        View the history of campaigns, requests and workflows
       </p>
     </div>
 
@@ -36,7 +36,7 @@
         <h3>Performance</h3>
       </a>
       <p>
-        Check the health of past requests, view time distribution of changes of satuses and the statistical numbers related to campaign
+        Check the health of past requests and view time distribution of status transitions and some statistics related to campaign
       </p>
     </div>
 
@@ -51,7 +51,7 @@
         <h3>Chains</h3>
       </a>
       <p>
-        Get overview of the chain campaigns and how they interact
+        Get overview of chained campaigns and how they interact
       </p>
     </div>
 
@@ -75,7 +75,7 @@
         <h3>About</h3>
       </a>
       <p>
-        Learn more from our twiki.
+        Learn more from our TWiki.
       </p>
     </div>
 
