--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -8,7 +8,7 @@
     <div ng-repeat="(prepid, value) in listSubmitted" class="spacing">
       <div class="col-lg-3 col-md-3 col-sm-3">
         <small>
-          {{prepid}}
+          <a ng-href="/mcm/requests?prepid={{prepid}}" target="_blank">{{prepid}}</a>
         </small>
       </div>
       <div class="col-lg-9 col-md-9 col-sm-9">
