--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -8,7 +8,8 @@
     <div ng-repeat="(prepid, value) in listSubmitted" class="spacing">
       <div class="col-lg-3 col-md-3 col-sm-3">
         <small>
-          <a ng-href="/mcm/requests?prepid={{prepid}}" target="_blank">{{prepid}}</a>
+          <a ng-if="prepid.indexOf('ReReco') == -1" ng-href="/mcm/requests?prepid={{prepid}}" target="_blank">{{prepid}}</a>
+          <a ng-if="prepid.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{prepid}}" target="_blank">{{prepid}}</a>
         </small>
       </div>
       <div class="col-lg-9 col-md-9 col-sm-9">
