--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -1,11 +1,11 @@
 <div class="row" ng-show="data.length">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" id="measure">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center spacing" id="measure">
     <linear-lifetime chart-data="data" task-chain="loadTaskChain" zoom-y="zoomOnY"
                      human-readable-numbers="humanReadableNumbers" class="spacing"></linear-lifetime>
     <p ng-hide="isEmpty(listSubmitted)">
       List of requests on status submitted:
     </p>
-    <div ng-repeat="(prepid, value) in listSubmitted" class="spacing">
+    <div ng-repeat="(prepid, value) in listSubmitted" class="zebra-lines small-padding">
       <div class="col-lg-3 col-md-3 col-sm-3">
         <small>
           <a ng-if="prepid.indexOf('ReReco') == -1" ng-href="/mcm/requests?prepid={{prepid}}" target="_blank">{{prepid}}</a>
